// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
Array [
  .c0 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>,
  .c1 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

<p
    aria-hidden="true"
    className="c0"
  >
    <span
      className="c1"
    >
      yoast.com
    </span>
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a faulty image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
Array [
  .c0 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>,
  .c1 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

<p
    aria-hidden="true"
    className="c0"
  >
    <span
      className="c1"
    >
      yoast.com
    </span>
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a landscape image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
Array [
  .c0 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>,
  .c1 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

<p
    aria-hidden="true"
    className="c0"
  >
    <span
      className="c1"
    >
      yoast.com
    </span>
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a portrait image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
Array [
  .c0 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>,
  .c1 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

<p
    aria-hidden="true"
    className="c0"
  >
    <span
      className="c1"
    >
      yoast.com
    </span>
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a square image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
Array [
  .c0 {
  width: 500px;
  height: 261px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  <span
    className="screen-reader-text"
  >
    yoast.com
  </span>,
  .c1 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

<p
    aria-hidden="true"
    className="c0"
  >
    <span
      className="c1"
    >
      yoast.com
    </span>
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with too small an image.
  </p>,
]
`;
